--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,8 +13,9 @@
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
+    "noImplicitAny": false,
     "jsx": "react-jsx",
-
+    "strictNullChecks": false,
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
